cmake_minimum_required(VERSION 3.9)
project(Assignment3)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assignment3 main.cpp BubbleSort.cpp BubbleSort.h SortingMethods.h SortingMethods.cpp SelectionSort.cpp SelectionSort.h InsertionSort.cpp InsertionSort.h ShellSort.cpp ShellSort.h MergeSort.cpp MergeSort.h QuickSort.cpp QuickSort.h SortingOutput.cpp SortingOutput.h)